P1.2.3 Validaciones Creadas resta valid Edit

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
   <!-- Materialize ICON -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
               
 </head>
 
@@ -19,5 +20,6 @@
   <app-root></app-root>
   <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </body>
 </html>
